--- a/CareerDayReg/CareerDayReg.html
+++ b/CareerDayReg/CareerDayReg.html
@@ -100,7 +100,7 @@
             </li>
         </ul>
     </div>
-    <div class="container"><h4>Choose {{numClasses}} classes</h4></div>
+    <div class="container"><h4>{{{instructions}}}</h4></div>
     <div class="container">
         <ul class="list-group">
             {{#each loop numClasses}}
@@ -135,7 +135,6 @@
             <select class="form-control classselect" name="classselect">
                 <option selected hidden disabled value=""></option>
                 {{#each clusters}}
-                    <option disabled>{{clustername}}</option>
                     {{#each classSelector clustername ..}}
                         <option data-meteor-id="{{_id}}" value="{{classname}}">{{classname}}</option>
                     {{/each}}
@@ -397,7 +396,7 @@
         {{/unless}}
     </ul>
     <ul class="list-group container">
-        <li class="list-group-item">
+        <li class="list-group-item" style="background-color:#f5f5f5">
             <div align="center">
                 <h4>Home Page Description</h4>
             </div>
@@ -418,8 +417,37 @@
                 </div>
                 <div align="center">
                     <div class="btn-group">
-                        <button type="button" name="savemaindescription" class="btn btn-default savemaindesciption"><span class="glyphicon glyphicon-ok"></span></button>
+                        <button type="button" name="savemaindescription" class="btn btn-default savemaindescription"><span class="glyphicon glyphicon-ok"></span></button>
                         <button type="button" name="cancelmaindescription" class="btn btn-default cancelmaindescription"><span class="glyphicon glyphicon-remove"></span></button>
+                    </div>
+                </div>
+            </li>
+        {{/unless}}
+    </ul>
+    <ul class="list-group container">
+        <li class="list-group-item" style="background-color:#f5f5f5;">
+            <div align="center">
+                <h4>Registration Instructions</h4>
+            </div>
+        </li>
+        {{#unless editingInstructions}}
+            <li class="list-group-item">
+                <div align="center">
+                    {{{instructions}}}
+                </div>
+                <div align="center">
+                    <button type="editinstructions" name="editinstructions" class="btn btn-default editinstructions"><span class="glyphicon glyphicon-pencil"></span></button>
+                </div>
+            </li>
+        {{else}}
+            <li class="list-group-item">
+                <div align="center">
+                    <textarea rows=4 style="resize:vertical;" name="instructionsentry" class="form-control instructionsentry">{{instructions}}</textarea>
+                </div>
+                <div align="center">
+                    <div class="btn-group">
+                        <button type="button" name="saveinstructions" class="btn btn-default saveinstructions"><span class="glyphicon glyphicon-ok"></span></button>
+                        <button type="button" name="cancelinstructions" class="btn btn-default cancelinstructions"><span class="glyphicon glyphicon-remove"></span></button>
                     </div>
                 </div>
             </li>
@@ -906,7 +934,7 @@
             </div>
             {{#if value.isFinal}}
                 <script>
-                    window.print();
+                    document.execCommand('print', false, null);
                     parent.postMessage("printed", "*");
                 </script>
             {{/if}}
