Added delete all button to roster

--- a/CareerDayReg/CareerDayReg.html
+++ b/CareerDayReg/CareerDayReg.html
@@ -205,10 +205,13 @@
                     <span>Class {{.}}</span>
                 </th>
 			{{/each}}
-            <th colspan="2"><div class="input-group">
+            <th><div class="input-group">
                 <span class="input-group-addon">Time</span>
                 <span class="input-group-btn"><button input="submit" name="timesort" class="btn btn-default timesort">Sort</button></span>
             </div></th>
+            <th>
+                <button type="button" name="deleteroster" class="btn btn-default deleteroster">Delete All</button>
+            </th>
         </tr>
 		</thead>
 		<tbody>
